Use commons codec for base64 instead of sun encoder/decoder (unfortunately this means we can no longer encode partial byte[] using an offset/length)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@14589 219f1c6e-4a0e-43c8-96f2-6e749be13fd4